right align user layout issues in navbar

--- a/src/App.css
+++ b/src/App.css
@@ -20,9 +20,25 @@
 }
 
 .nav-link {
-  padding-left: 2% !important;
+  margin-left: 2% !important;
+}
+
+.user {
+  margin-left: auto;
+}
+
+.pic {
+  margin: auto;
+}
+
+.userPFP {
+  /* padding: 2% !important; */
+  height: 1.3em !important;
+  width: 1.3em !important;
 }
 
 .dropdown-menu {
-  margin: 2% !important;
+  right: 0 !important;
+  font-size: 0.9em !important;
+  min-width: 5em;
 }
